use Integer.valueOf rather than new Integer to use vm caching
git-svn-id: https://svn.apache.org/repos/asf/incubator/ognl/trunk@1124148 13f79535-47bb-0310-9956-ffa450edef68