@@ -113,7 +113,7 @@ public class IntHashMap
                 Entry e = entry;
 
                 entry = e.next;
-                return keys ? new Integer( e.key ) : e.value;
+                return keys ? Integer.valueOf( e.key ) : e.value;
             }
             throw new NoSuchElementException( "IntHashMapIterator" );
         }
